spacing fixed

--- a/css/store.css
+++ b/css/store.css
@@ -5,6 +5,7 @@ main {
     display: flex;
     flex-direction: row;
     margin:0;
+    color:gray;
 }
 
 .store_title {
@@ -63,6 +64,14 @@ fieldset {
     display: flex;
     flex-direction: column;
     margin-bottom: 2rem;
+}
+
+.colour_section {
+    margin: 2rem 0 2rem 0;
+}
+
+.colour_title {
+    margin: 2rem 0 1rem 0;
 }
 
 /* image */
